################################################################################
# Spectral Python (SPy) package change log
################################################################################

2013-03-07	tboggs <tboggs@users.sourceforge.net>

    Fixed setting `status` object in top-level package and allow
    envi.save_image to handle TransformedImage objects.

    * io/envi.py (save_image): Handle TransformedImage objects.
    * io/spyfile/py (SpyFile.transform): New method.
    * spectral.py (_init): Fixed setting `status` member in top-level package.
    
2013-03-06	tboggs <tboggs@users.sourceforge.net>

    Fixed writing of description parameter for ENVI file and possible incorrect
    transpose in envi.save.
    
    io/envi.py:
      (save_image): Handle correct transpose and byte-swapping of image data
        when using memmaps.
      (_write_header_param): Perform special handling of description parameter.

    Made speed improvement to envi.save_image.
    
    * io/envi.py (save_image): Write directly to file instead of using
      numpy's `tofile` function.

    Move clutter out of top-level namespace.
    
    * __init__.py: Move initialization code into _init() in spectral.py
    * graphics/spypylab.py (plot): Move spectral.xyplot to spectral._xyplot.
    * io/spyfile.py: Remove unecessary warning imports.
    * spectral.py (_init): New function for package initialization.

    Added RX anomaly detector. Now importing `detectors` submodule into
    top-level namespace.

    * __init__.py: import algorithms.detectors into top-level namespace.
    * algorithms/__init__.py: Do not import MatchedFilter.
    * algorithms/detectors.py: Applied autopep8
      (RX): New class.
    
2013-03-05	tboggs <tboggs@users.sourceforge.net>

    Ran autopep8 on envi.py and fixed two incorrect exception statements.
    
    * io/envi.py: Fixed whitespace and code formatting via autopep8